--- a/backend/foodiesapi/src/main/resources/application.properties
+++ b/backend/foodiesapi/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=foodiesapi
 
 spring.data.mongodb.uri=mongodb://localhost:27017/foodies
+
+aws.access.key=${AWS_ACCESS_KEY}
+aws.secret.key=${AWS_SECRET_KEY}
+aws.region=${AWS_REGION}
+aws.s3.bucketname=foodies-ollirum
