--- a/backend/foodiesapi/src/main/resources/application.properties
+++ b/backend/foodiesapi/src/main/resources/application.properties
@@ -6,3 +6,5 @@ aws.access.key=${AWS_ACCESS_KEY}
 aws.secret.key=${AWS_SECRET_KEY}
 aws.region=${AWS_REGION}
 aws.s3.bucketname=foodies-ollirum
+
+jwt.secret.key=1fDb8JATYywCBfDGSER/QgWCbWuhthL+gjS/0uxNO+c=
