Create Order and Config Stripe

--- a/backend/foodiesapi/src/main/resources/application.properties
+++ b/backend/foodiesapi/src/main/resources/application.properties
@@ -8,3 +8,6 @@ aws.region=${AWS_REGION}
 aws.s3.bucketname=foodies-ollirum
 
 jwt.secret.key=1fDb8JATYywCBfDGSER/QgWCbWuhthL+gjS/0uxNO+c=
+
+stripe.secret-key=${STRIPE_SECRET_KEY}
+stripe.webhook-secret=${STRIPE_WEBHOOK_SECRET}
