--- a/backend/foodiesapi/pom.xml
+++ b/backend/foodiesapi/pom.xml
@@ -84,6 +84,18 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>31.3.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20251224</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
