--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI - Spring Boot
 
 on:
   push:
-    branches: [ "main", "develop" ]
+    branches: ["main", "develop"]
   pull_request:
-    branches: [ "main", "develop" ]
+    branches: ["main", "develop"]
 
 jobs:
   build:
@@ -18,7 +18,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.m2
-          key: maven-${{ hashFiles('**/pom.xml') }}
+          key: maven-${{ hashFiles('backend/foodiesapi/pom.xml') }}
           restore-keys: maven-
 
       - name: Setup Java
@@ -28,4 +28,5 @@ jobs:
           java-version: 17
 
       - name: Build e testes
+        working-directory: backend/foodiesapi
         run: mvn clean verify
